# jcurl

./: README.MD
app/: .gitignore  CMakeLists.txt  build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/my/example/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/my/jcurl/: ExampleInstrumentedTest.java
app/src/androidTest/java/s/docker/com/jcurl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CAData.cpp  CAData.h  CommonHttpManager.cpp  CommonHttpManager.h  CurlUtil.cpp  CurlUtil.h  HttpClient.cpp  HttpClient.h  HttpCookie.cpp  HttpRequest.h  HttpResponse.h  ccUtils.cpp  curljni.c  curljni.cxx  curljni.h  curljni.i  native-lib.c
app/src/main/cpp/Json/lib_json/: CMakeLists.txt
app/src/main/cpp/jni/: fixjava.i  momory.i
app/src/main/java/com/my/example/: ImageViewAdapter.java  MainActivity.java
app/src/main/java/com/my/jcurl/: ByteResponse.java  CurlUtil.java  CurlUtilsJNI.java  ImageViewAdapter.java  MainActivity.java  ParamMap.java  Progress.java
app/src/main/java/s/docker/com/jcurl/: ByteResponse.java  CurlUtil.java  CurlUtils.java  CurlUtilsJNI.java  ImageViewAdapter.java  MainActivity.java  Map.java  ParamMap.java  Progress.java  Response.java  SWIGTYPE_jobject.java  SWIGTYPE_p_unsigned_char.java  jcurl.java  jcurlJNI.java
app/src/main/res/layout/: activity_main.xml  grid_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/my/example/: ExampleUnitTest.java
app/src/test/java/com/my/jcurl/: ExampleUnitTest.java
app/src/test/java/s/docker/com/jcurl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/androidTest/java/com/my/jcurl/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CurlUtil.cpp  CurlUtil.h  HttpClient.cpp  HttpRequest.h  ccUtils.h  curljni.cxx  curljni.h  curljni.i
lib/src/main/cpp/curl/: CMakeLists.txt
lib/src/main/cpp/jni/: fixjava.i  momory.i
lib/src/main/java/com/my/jcurl/: ByteResponse.java  CurlUtil.java  CurlUtils.java  CurlUtilsJNI.java  ParamArray.java  ParamFormData.java  ParamFormMap.java  ParamMap.java  Progress.java  Response.java
